Contrast warning message class name fix
- Changed .warning-message class name to .contrast-warning-message to match the class in DOM

--- a/demo/main.css
+++ b/demo/main.css
@@ -10,7 +10,7 @@
     --primary-font: ubuntu, sans-serif;
     --textarea-font: 'JetBrains Mono', monospace;
     --color-input-box-shadow: rgb(0 0 0 / 2%) 0 1px 3px 0,
-                      rgb(27 31 35 / 15%) 0 0 0 1px;
+                              rgb(27 31 35 / 15%) 0 0 0 1px;
     --button-box-shadow: rgb(0 0 0 / 10%) 0 2px 4px 0;
     --button-box-shadow-hover: rgb(0 0 0 / 15%) 0 3px 9px 0;
     --dialog-box-shadow: rgb(0 0 0 / 1%) 0 1px 3px 0,
@@ -149,7 +149,7 @@ label {
     }
 }
 
-.warning-message {
+.contrast-warning-message {
     color: var(--warning);
     font-family: var(--textarea-font), sans-serif;
     font-weight: 600;
